Thu May 29 00:00:28 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am,date.cc,date.h,query.cc: Split code to build a
	  date range filter into a separate file.

Wed May 28 23:38:02 BST 2003  Olly Betts <olly@survex.com>

	* configfile.cc,configfile.h,omega.cc,omega.conf,query.cc,query.h,
	  docs/omegascript.txt,docs/overview.txt,docs/quickstart.txt:
	  Replaced half-hearted logging support with flexible
	  OmegaScript-based approach with new $log command.  Also added
	  $now to allow the current date/time to be logged.

Tue May 27 17:55:24 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: Added missing "#include <assert.h>".

Mon May 26 22:41:26 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Don't use libtool; Use AC_CONFIG_FILES - it's the new
	  autoconf way!
			  
Mon May 26 12:12:22 BST 2003  Olly Betts <olly@survex.com>

	* omega.spec.in: Removed %changelog - it hasn't been reliably updated
	  and only really makes sense when the packaging is done by a third
	  party anyway.

Mon May 26 12:01:55 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: If the query is empty, don't bother running it through
	  enquire.

Wed Apr 30 01:18:47 BST 2003  Olly Betts <olly@survex.com>

	* docs/cgiparams.txt,docs/omegascript.txt: Minor improvements.

Wed Apr 30 01:14:46 BST 2003  Olly Betts <olly@survex.com>

	* query.cc: Use correct types for docid and value_no in $value.

Wed Apr 23 16:15:07 BST 2003  Sam Liddicott <sam@liddicott.com>

	* templates/xml: add collapse info to xml template.

Wed Apr 23 14:00:37 BST 2003  Olly Betts <olly@survex.com>

	* omega.spec.in: Merged changes from Fabrice Colin.

Thu Apr 10 03:14:51 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Updated for 0.6.5 release.

Wed Apr 09 13:56:14 BST 2003  Olly Betts <olly@survex.com>

	* omega.cc,query.cc,omega.h,docs/cgiparams.txt: Renamed DATE1, DATE2,
	  and DAYSMINUS to the more meaningful START, END, and SPAN (NB SPAN